other/require-image-checksum/.chainsaw-test/pod-bad-for-ephemeral.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-for-debug
spec:
  containers:
  - name: busybox
    image: busybox@sha256:67a8ef886e2ca4055f00e7cd13aedb9b24148c1451a6832d16fcc997a157eedc
    command: ["sleep", "1d"]
