other/require-image-checksum/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: busybox
      image: busybox:1.35
    - name: busybox02
      image: busybox@sha256:67a8ef886e2ca4055f00e7cd13aedb9b24148c1451a6832d16fcc997a157eedc
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: busybox
      image: busybox
    - name: bb
      image: busybox:latest
