other/require-image-checksum/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-checksum
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
